[package]
name = "win32-error"
version = "0.9.0"
authors = ["jojonv <novakj@outlook.com>", "Jean Pierre Dudey <jeandudey@hotmail.com>"]
license = "Apache-2.0"
keywords = ["winapi", "windows", "win32error", "error", "ffi"]
repository = "https://github.com/Rust-WinGUI/win32-error.git"
homepage = "https://github.com/Rust-WinGUI/win32-error"
description = "Error like wrapper for GetLastError for Windows"
edition = "2018"

[dependencies]
winapi = { version = "0.3.9", features = ["errhandlingapi", "winbase"] }
